# cpp-project-template

./: .gitignore  CMakeLists.txt  Makefile  README.md
src/: CMakeLists.txt  main.cpp
src/MyLib/: CMakeLists.txt  lib_module.cpp  lib_module.h
src/MyLib/include/: interface.h
src/include/: project-nameConfig.h
tests/: CMakeLists.txt  test_cust_func.cpp
